logs/remopenid.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RemOpenID-0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/topp'...
Listing './lib/python3.5/site-packages/topp/remopenid'...
Compiling './lib/python3.5/site-packages/topp/remopenid/plugin.py'...
***   File "./lib/python3.5/site-packages/topp/remopenid/plugin.py", line 130
    except DiscoveryFailure, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/topp/remopenid/portlets'...
Listing './lib/python3.5/site-packages/topp/remopenid/profiles'...
Listing './lib/python3.5/site-packages/topp/remopenid/profiles/default'...
Listing './lib/python3.5/site-packages/topp/remopenid/profiles/default/PAS'...
Listing './lib/python3.5/site-packages/topp/remopenid/www'...
Listing './share'...
Listing './share/python-wheels'...
